placeholders and minor changes

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -39,7 +39,7 @@ title = "Chaitasi Parikh"
   #   { keybase = "https://keybase.io/username" },
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
-  { linkedin = "https://linkedin.com/in/username" },
+  { linkedin = "https://linkedin.com/in/chaitasi-parikh-75278677" },
   #   { mastodon = "https://mastodon.instance/@username" },
   #   { medium = "https://medium.com/username" },
   #   { mendeley = "https://www.mendeley.com/" },
